# gwatch

./: CMakeLists.txt  LICENSE  README.md  args.c  args.h  fs_listener.c  fs_listener.h  fs_oper.h  fs_oper_linux.c  fs_oper_win.c  git.c  git.h  logs.c  logs.h  main.c
assets/: assets.rc
lib/libgit2/src/: CMakeLists.txt
lib/libgit2/src/win32/: git2.aps
lib/libuv/: CMakeLists.txt
